# Novanota

./: .gitignore  Cargo.toml  README.md
novanota-client/: Cargo.toml
novanota-server/: Cargo.toml
novanota-server/src/: main.rs
