[package]
name = "novanota-server"
version = "0.1.0"
edition = "2021"

authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"

description = "The server for Novanota, software to organise everything you do."
repository = "https://github.com/BenMcAvoy/Novanota"
homepage = "https://github.com/BenMcAvoy/Novanota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
